--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zaragoza RP - Bienvenida</title>
+    <title>Cadiz Rp™ | Español - Bienvenida</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="overlay">
         <div class="content">
             <img src="logo.png" alt="Logo Zaragoza RP" class="logo">
-            <h1>Bienvenido a Zaragoza RP</h1>
+            <h1>Bienvenido a Cadiz Rp™ | Español</h1>
             <p class="subtitle">¡Únete a la mejor experiencia de roleplay!</p>
             <button id="enterBtn">Entrar al servidor</button>
         </div>
@@ -20,3 +20,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
