--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zaragoza RP - Información</title>
+    <title>Cadiz Rp™ | Español - Información</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     </nav>
 
     <div class="info-container">
-        <h1>Sobre Zaragoza RP</h1>
-        <p>Servidor de roleplay ambientado en Zaragoza. Vive historias, conduce vehículos, trabaja o delinque, ¡tú eliges tu rol!</p>
+        <h1>Sobre Cadiz Rp™ | Español</h1>
+        <p>Servidor de roleplay ambientado en Cadiz. Vive historias, conduce vehículos, trabaja o delinque, ¡tú eliges tu rol!</p>
 
         <h2>Equipo Administrativo</h2>
         <div class="staff-grid">
@@ -33,3 +33,4 @@
     </script>
 </body>
 </html>
+
