--- a/info.html
+++ b/info.html
@@ -17,12 +17,19 @@
 
         <h2>Equipo Administrativo</h2>
         <div class="staff-grid">
+            <!-- Dueño 1 -->
             <div class="staff-member">
-                <img src="dueño.png" alt="Maximo">
-                <h3>Maximo</h3>
+                <img src="dueño.png" alt="David">
+                <h3>David</h3>
                 <p>Dueño</p>
             </div>
-            <!-- Puedes agregar más staff copiando este div y cambiando foto/nombre/cargo -->
+
+            <!-- Dueño 2 -->
+            <div class="staff-member">
+                <img src="dueño2.png" alt="Maximo">
+                <h3>Maximo</h3>
+                <p>Co-Dueño</p>
+            </div>
         </div>
     </div>
 
@@ -33,4 +40,3 @@
     </script>
 </body>
 </html>
-
