--- a/index.html
+++ b/index.html
@@ -4,29 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cádiz RP™ | Español - Bienvenida</title>
-  <link rel="stylesheet" href="style.css">
   <style>
-    /* Fondo con la imagen rp2 */
-    body {
+    /* Reset */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Fondo con la imagen rp2 */
+    body {
       font-family: Arial, sans-serif;
       background: url("rp2.png") no-repeat center center fixed;
       background-size: cover;
       color: white;
-    }
-
-    .overlay {
-      width: 100%;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: rgba(0, 0, 0, 0.5); /* oscurece un poco la imagen para que se lea bien el texto */
+      overflow: hidden;
+    }
+
+    /* Oscurecer fondo para mejor lectura */
+    .overlay {
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
     }
 
     .content {
       text-align: center;
+      position: relative;
+      z-index: 2;
     }
 
     .logo {
@@ -54,19 +67,43 @@
       cursor: pointer;
       transition: 0.3s;
       color: white;
+      font-weight: bold;
     }
 
     #enterBtn:hover {
       background: #cc0000;
     }
 
+    /* Partículas animadas */
     .particles {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      pointer-events: none;
+      z-index: 1;
+      overflow: hidden;
+    }
+
+    .particle {
+      position: absolute;
+      width: 5px;
+      height: 5px;
+      background: white;
+      border-radius: 50%;
+      opacity: 0.7;
+      animation: float 10s linear infinite;
+    }
+
+    @keyframes float {
+      from {
+        transform: translateY(100vh) scale(0.5);
+        opacity: 1;
+      }
+      to {
+        transform: translateY(-10vh) scale(1.2);
+        opacity: 0;
+      }
     }
   </style>
 </head>
@@ -78,9 +115,39 @@
       <p class="subtitle">¡Únete a la mejor experiencia de roleplay!</p>
       <button id="enterBtn">Entrar al servidor</button>
     </div>
-    <div class="particles"></div>
+    <div class="particles" id="particles"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    // Generador de partículas
+    const particlesContainer = document.getElementById("particles");
+
+    function createParticle() {
+      const particle = document.createElement("div");
+      particle.classList.add("particle");
+
+      // Posición aleatoria
+      particle.style.left = Math.random() * window.innerWidth + "px";
+
+      // Duración aleatoria
+      const duration = Math.random() * 10 + 5;
+      particle.style.animationDuration = duration + "s";
+
+      // Tamaño aleatorio
+      const size = Math.random() * 4 + 2;
+      particle.style.width = size + "px";
+      particle.style.height = size + "px";
+
+      particlesContainer.appendChild(particle);
+
+      // Eliminar después de animación
+      setTimeout(() => {
+        particle.remove();
+      }, duration * 1000);
+    }
+
+    // Generar partículas continuamente
+    setInterval(createParticle, 300);
+  </script>
 </body>
 </html>
